# source-mlir

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  build-llvm-debug.sh  build-llvm.sh  check  grammar.bnf  init-fini.txt  lit.site.cfg.py.in  test.src
docs/: .gitignore  docs.tex  grammar.bnf  ltx-highlight-code.sty  mangling.txt
include/: core.hh  result.hh  utils.hh
include/frontend/: ast.hh  lexer.hh  parser.hh
include/hlir/: CMakeLists.txt  HLIRDialect.hh  HLIRDialect.td  HLIRLowering.hh  HLIROps.td
include/source/: Core.hh
include/source/CG/: ASTIRInterface.hh  CodeGen.hh  HLIRLowering.hh
include/source/Driver/: Driver.hh
include/source/Frontend/: AST.def  AST.hh  AST.td  Lexer.hh  Parser.hh  Sema.hh  Token.hh
include/source/HLIR/: CMakeLists.txt  HLIRDialect.hh  HLIRDialect.td  HLIRLowering.hh  HLIROps.td  HLIRUtils.hh
include/source/Support/: Buffer.hh  DisjointSets.hh  Generator.hh  Result.hh  StringTable.hh  TopologicalSort.hh  Utils.hh
legacy/aoc23/: 1.src
lib/: Core.cc  Endec.cc  core.cc
lib/CG/: CodeGen.cc  Emit.cc  HLIRLowering.cc
lib/Driver/: Driver.cc
lib/Frontend/: AST.cc  Assimilate.cc  Lexer.cc  Parser.cc  lexer.src
lib/Frontend/Sema/: CXX.cc  Eval.cc  Sema.cc
lib/HLIR/: HLIR.cc  HLIRDialect.cc  HLIRLowering.cc  HLIRXfrms.cc
lib/frontend/: lexer.cc  lexer.src  parser.cc
lib/hlir/: HLIRDialect.cc  HLIRLowering.cc
old/: AST.cc  AST.hh  Parser.cc
src/: Main.cc  Tablegen.cc  main.cc
std/: __src_runtime.src  json.src  libc.src  string.src
tests/: CMakeLists.txt  alias.src  array-init.src  array-programming.src  array_exp.src  assert.src  binop.src  break-continue.src  break.src  cast.src  cc.src  cf.src  chain.src  closure-array.src  closure-typeof.src  closure.src  consteval.src  continue.src  coro-parser.src  ctor-noncopyable-err.src  ctor.src  defer-block.src  defer-early-return-block.src  defer.src  dtor.src  dtor_simple.src  enum-abuse.src  enum-enumerator-in-enumerator.src  enum-err.src  enum-infer-assign.src  enum-param-scope.src  enum-param.src  enums.src  export-outside-module.src  extern.src  fact.src  ffi-c-int-16-bits.src  ffi-rank-error.src  ffi-rank.src  ffi-to-int.src  (+76 more)
tests-old/: args.src  array-multidimensional.src  array-nonprimitive.src  array.src  assert.src  break-while.src  compound-assign.src  cond-implicit.src  cond.src  continue-while.src  ctor-generated.src  ctor.src  defer-early-return.src  deproceduring.src  early-return.src  enum-enumerator-error.src  enum.src  err-ambig-enum.src  filename.src  for-i8.src  for.src  fptr.src  id.src  if.src  import-c-open.src  import-c.src  inline-asm.src  int-to-ffi.src  libc.src  literal-type-inference.src  meta-properties.src  noreturn-should-not-return.src  operator-overloading.src  param-multiple.src  pointer-to-ref-error.src  range-down-in.src  range-empty-ex.src  range-ex.src  range-in.src  references-parsing-3.src  (+24 more)
tests-old/module/: main.src  module.src
tests-old/module-dot-in-name/: main.src
tests-old/module-import-struct/: main.src
tests-old/module-init-once/: main.src  stage1.src
tests-old/module-invalid-export/: main.src
tests-todo/: init-semantics.src  template.src  vectors.src
tests/aoc23/: 1.src
tests/module-dot-in-name/: module.src
tests/module-error-noexport/: main.src
tests/module-import-star/: main.src
tests/module-import-struct/: module.src
tests/module-init-once/: stage2.src
